fix: DropDown flickering

--- a/Sereno.Client/src/assets/scss/paper-dashboard/angular/_dropdown.scss
+++ b/Sereno.Client/src/assets/scss/paper-dashboard/angular/_dropdown.scss
@@ -1,3 +1,4 @@
-.dropdown-menu-right{
-  right: 0 !important;
+.dropdown-menu-right {
+  right: 2px !important;
+  top: 50px;
 }
